Closed Bug 153970 Opened 22 years ago Closed 22 years ago

Toolbar bookmark area repositions itself behind the application's main Toolbar

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Chimera0.5

People

(Reporter: chrispetersen, Assigned: sfraser_bugs)

Details

Attachments

(3 files, 1 obsolete file)

Build: 2002-06-24-05
Platform: OS X 10.1.5
Expected Result: Position of Toolbar bookmarks area should remain below main
toolbar.
 
What I got: Top portion of Toolbar bookmarks is repositioned behind main toolbar.

Steps to reproduce:

1) Create two lines of bookmarks in toolbar.
2) Resize browser window to smallest possible size. No scroll bar should be
displayed and just the bookmarks items on toolbar are visible.
3) Now, maximize browser window.
4) Toolbar bookmarks area is repositioned behind main toolbar.
Summary: Toolbar bookmark area repositions itself Toolbar bookmarks area Toolbar bookmarks area behind the application's toolbar → Toolbar bookmark area repositions itself behind the application's main Toolbar
neat, ->pinkerton
Assignee: saari → pinkerton
I have seen this type of drawing problem before:
http://bugzilla.mozilla.org/show_bug.cgi?id=147923. 
dagnabbit
Status: NEW → ASSIGNED
Target Milestone: --- → Chimera0.5
Attached file Fixes the moving toolbar (obsolete) —
This patch alters the BrowserWindow nib to set a custom subclass for the
browser window's content view.	The implementaton of the content view is
included.  All it does is change the resizing behavior to avoid this.
Attachment #95727 - Attachment is obsolete: true
QA Contact: winnie → sairuh
Summary: Toolbar bookmark area repositions itself behind the application's main Toolbar → Toolbar bookmark area repositions itself behind the application's main Toolbar
simon said he'd look at this. i'm not sure about subclassing the content view.
seems like a better fix is possible.
Assignee: pinkerton → sfraser
Status: ASSIGNED → NEW
The problem is that the toolbar bookmark class does a bunch of relative resizing
of other views itself.  When setFrame: is sent to the toolbar, it figures out
how much it's height has changed, and changes the height of the browser view.

THEN cocoa gets around to sending setFrame: to the browser view as part of it's
own autoresizing, which (if all went well), should end up right.  The fact that
cocoa is autoresizing the browser view after the toolbar does it's thing makes
it difficult to set the frame correctly.  We would have to anticipate how
cocoa's autoresizing is going to behave in EVERY possible situation, or things
will get off.  That is what is happening

The cleanest solution would be to code a custom superview for both (which is
what I've done), but cut out cocoa's autoresizing entirely (which is what I
didn't do).  Right now, my quick&dirty fix lets the toolbar resize the browser
view, but then I just ignore that and set the size to what it should be after
the autoresizing is done.

In retrospect, this is even worse becase we're probably incurring speed
penalities from another unnecessary reflow.  (as it stands, we're calling
setFrame: on the browser twice, and with my patch, 3 times).  By disabling
autosizing we can cut that down to 1.
I think the real bug here is that the bookmarks toolbar didn't correctly resize
itself after reflowing bookmark buttons. I've fixed that, and I don't see the
issue any more.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
following chris' steps in comment 0, i cannot reproduce this using 2002.08.27.05
bits. looks fixed, but i'll compare with an older build...
rs vrfy --i don't have a build from june, and what older builds i have don't
exhibit this.

chris, feel free to reopen if it's still a problem for you!
Status: RESOLVED → VERIFIED
This problem appears to be fixed too. However, I can get the bookmark's
pinstripe background to disappear using a similar technique. See attachment.
That's exactly the bug we're trying to fix.  The browser view is getting resized
incorrectly, so it and the bookmarks overlap.
okay, reopening.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Ok, this is a bit strange.  Both the namesake of this bug (bookmarks end up
behind the toolbar), and chris' bug (bookmarks and browser overlap) are results
of the same bug (cocoa's autoresizing doing things we don't expect, such as when
a view is moved out of the bounds of it's window).

I could easily recreate both when I was working on this bug, but now I can't
recreate the first symptom with either the aug 25th's nightly, nor 0.4 (which I
just downloaded from ftp.moz).  I'll have to poke around a bit more before I'll
know what's going on.

Simon, when did you land that patch?  I'd like to look at it. I didn't see it in
bosai.
Toggling visibility of the bookmarks toolbar also shows a cosmetic bug. Is that
related?
Status: REOPENED → ASSIGNED
The key to reproducing this bug is to make the browser window small enough that
_none_ of the content area is visible.
This is fixed now.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
Verified in 2002-10-02-04 NB.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: