Fix bug 153970: the bookmarks toolbar layout code was broken, causing toolbar bookmarks to disappear on window resize.